--- a/CSS/BUS-Home.css
+++ b/CSS/BUS-Home.css
@@ -26,3 +26,28 @@ th {
     color: red;
     text-align: center;
 }
+.navbar-brand{
+    color:#FCCA27;
+}
+
+#loginAvatar{
+    width: 300px;
+    align-self: center;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 160px;
+}
+
+#loginForm{
+    padding-top: 40px;
+}
+
+.loginButton{
+    color: #1F1F1F;
+    background-color: #FCCA27;
+}
+
+#login{
+    padding-left: 15px;
+    padding-right: 15px;
+}
